--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$GId9RjA2JI4S3YIdqnrhk.RBWjkelLgeLCLHefBwMNs6/T20YWQTK"
+# 	- password: java.lang.String = "$2a$05$BYQvI84WL/PxzLh/SnZ8KO0OI1OSXoNCyudX4.qt1TXHdiCluK3ae"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$XKSmmDyEr1KM8MEfXLXeX.EXDiJ/5Unu7Y5SoUHPMK53Dlef.pfni"
+# 	- password: java.lang.String = "$2a$05$gKgriks2aGCJiVUEc9LJseWIUXfzrmyXw8jE.oU1re4QkvMG27LM6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -230,8 +230,261 @@ toolRecord04=13
 # 	- activitySector: acme.entities.toolRecords.TipoSector = <<HEALTH>>
 # 	- email: java.lang.String = "email04@hotmail.com"
 # 	- stars: java.lang.Integer = null
-
 # 	- openSource: boolean = true
 
+challenge01=14
 
+# acme.entities.challenges.Challenge{id=14, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 14
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "your first challenge"
+# 	- deadline: java.util.Date = <<Sat Oct 10 19:10:00 CEST 2020>>
+# 	- description: java.lang.String = "this is your first challenge"
+# 	- objetivoRookie: java.lang.String = "complete objective 1"
+# 	- objetivoAverage: java.lang.String = "complete objectives 1 and 2"
+# 	- objetivoExpert: java.lang.String = "complete any 5 objectives"
+# 	- premioRookie: acme.framework.datatypes.Money = <<EUR 20.00>>
+# 	- premioAverage: acme.framework.datatypes.Money = <<EUR 50.00>>
+# 	- premioExpert: acme.framework.datatypes.Money = <<EUR 300.00>>
+
+challenge02=15
+
+# acme.entities.challenges.Challenge{id=15, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 15
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "your second challenge"
+# 	- deadline: java.util.Date = <<Sat Dec 11 17:15:00 CET 2021>>
+# 	- description: java.lang.String = "this is your second challenge"
+# 	- objetivoRookie: java.lang.String = "do rookie things"
+# 	- objetivoAverage: java.lang.String = "do average things"
+# 	- objetivoExpert: java.lang.String = "do EXPERT things"
+# 	- premioRookie: acme.framework.datatypes.Money = <<EUR 50.00>>
+# 	- premioAverage: acme.framework.datatypes.Money = <<EUR 100.00>>
+# 	- premioExpert: acme.framework.datatypes.Money = <<EUR 200.00>>
+
+challenge03=16
+
+# acme.entities.challenges.Challenge{id=16, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 16
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "your third and last challenge :P"
+# 	- deadline: java.util.Date = <<Fri Dec 10 20:00:00 CET 2100>>
+# 	- description: java.lang.String = "this is your last challenge"
+# 	- objetivoRookie: java.lang.String = "just do something"
+# 	- objetivoAverage: java.lang.String = "do something more"
+# 	- objetivoExpert: java.lang.String = "do EVERYTHING"
+# 	- premioRookie: acme.framework.datatypes.Money = <<EUR 30.00>>
+# 	- premioAverage: acme.framework.datatypes.Money = <<EUR 40.00>>
+# 	- premioExpert: acme.framework.datatypes.Money = <<EUR 500.00>>
+
+challengePAST=17
+
+# acme.entities.challenges.Challenge{id=17, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 17
+# 	- version: int = 0
+# 	from acme.entities.challenges.Challenge:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "Should not be showed"
+# 	- deadline: java.util.Date = <<Mon Dec 10 20:00:00 CET 2018>>
+# 	- description: java.lang.String = "should not matter"
+# 	- objetivoRookie: java.lang.String = "meh"
+# 	- objetivoAverage: java.lang.String = "meh"
+# 	- objetivoExpert: java.lang.String = "meh"
+# 	- premioRookie: acme.framework.datatypes.Money = <<EUR 3.00>>
+# 	- premioAverage: acme.framework.datatypes.Money = <<EUR 4.00>>
+# 	- premioExpert: acme.framework.datatypes.Money = <<EUR 5.00>>
+
+inquiry01=18
+
+# acme.entities.inquiries.Inquiry{id=18, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 18
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title inquiry 01"
+# 	- description: java.lang.String = "Description tool 01"
+# 	- creation: java.util.Date = <<Fri Mar 05 20:15:00 CET 2010>>
+# 	- deadline: java.util.Date = <<Mon Oct 20 13:59:00 CEST 2025>>
+# 	- email: java.lang.String = "emailenquiry01@hotmail.com"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 100.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 500.00>>
+
+inquiry02=19
+
+# acme.entities.inquiries.Inquiry{id=19, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 19
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title inquiry 02"
+# 	- description: java.lang.String = "Description tool 02"
+# 	- creation: java.util.Date = <<Sun Mar 11 20:15:00 CET 2018>>
+# 	- deadline: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
+# 	- email: java.lang.String = "emailenquiry02@hotmail.com"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 800.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
+
+inquiry03=20
+
+# acme.entities.inquiries.Inquiry{id=20, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 20
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title inquiry 03"
+# 	- description: java.lang.String = "Description tool 03"
+# 	- creation: java.util.Date = <<Sun Mar 11 20:15:00 CET 2018>>
+# 	- deadline: java.util.Date = <<Sun Dec 11 10:30:00 CET 2022>>
+# 	- email: java.lang.String = "emailenquiry03@hotmail.com"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 1500.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 3000.50>>
+
+inquiry04=21
+
+# acme.entities.inquiries.Inquiry{id=21, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 21
+# 	- version: int = 0
+# 	from acme.entities.inquiries.Inquiry:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title inquiry 04"
+# 	- description: java.lang.String = "Description tool 04"
+# 	- creation: java.util.Date = <<Sat Mar 21 20:15:00 CET 2020>>
+# 	- deadline: java.util.Date = <<Wed Dec 11 23:59:00 CET 2030>>
+# 	- email: java.lang.String = "emailenquiry04@hotmail.com"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 1000.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 5000.00>>
+
+overture01=22
+
+# acme.entities.overtures.Overture{id=22, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 22
+# 	- version: int = 0
+# 	from acme.entities.overtures.Overture:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title overture 01"
+# 	- creation: java.util.Date = <<Fri Mar 05 20:15:00 CET 2010>>
+# 	- deadline: java.util.Date = <<Mon Oct 20 13:59:00 CEST 2025>>
+# 	- description: java.lang.String = "Description overture 01"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 100.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 500.00>>
+# 	- email: java.lang.String = "emailoverture01@hotmail.com"
+
+overture02=23
+
+# acme.entities.overtures.Overture{id=23, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 23
+# 	- version: int = 0
+# 	from acme.entities.overtures.Overture:
+# 	- serialVersionUID: long = 1
+# 	- title: java.lang.String = "title overture 02"
+# 	- creation: java.util.Date = <<Sun Mar 11 20:15:00 CET 2018>>
+# 	- deadline: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
+# 	- description: java.lang.String = "Description overture 02"
+# 	- minMoney: acme.framework.datatypes.Money = <<€ 800.00>>
+# 	- maxMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
+# 	- email: java.lang.String = "emailoverture02@hotmail.com"
+
+notice01=24
+
+# acme.entities.notices.Notice{id=24, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 24
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- header: java.lang.String = "https://i.pinimg.com/originals/f8/b2/7d/f8b27d53c369a1413a8876a1d3d1a597.jpg"
+# 	- title: java.lang.String = "title notice 1"
+# 	- body: java.lang.String = "Description of body 1"
+# 	- creationDateTime: java.util.Date = <<Sun Feb 15 10:15:00 CET 2015>>
+# 	- deadline: java.util.Date = <<Sat Oct 10 12:59:00 CEST 2026>>
+# 	- optionalLinks: java.lang.String = null
+
+notice02=25
+
+# acme.entities.notices.Notice{id=25, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 25
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- header: java.lang.String = "https://i.pinimg.com/originals/f8/b2/7d/f8b27d53c369a1413a8876a1d3d1a597.jpg"
+# 	- title: java.lang.String = "title notice 2"
+# 	- body: java.lang.String = "Description of body 2"
+# 	- creationDateTime: java.util.Date = <<Fri Feb 15 12:15:00 CET 2013>>
+# 	- deadline: java.util.Date = <<Thu Nov 11 02:59:00 CET 2027>>
+# 	- optionalLinks: java.lang.String = null
+
+notice03=26
+
+# acme.entities.notices.Notice{id=26, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 26
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- header: java.lang.String = "https://i.pinimg.com/originals/f8/b2/7d/f8b27d53c369a1413a8876a1d3d1a597.jpg"
+# 	- title: java.lang.String = "title notice 3"
+# 	- body: java.lang.String = "Description of body 3"
+# 	- creationDateTime: java.util.Date = <<Sat Feb 15 15:15:00 CET 2014>>
+# 	- deadline: java.util.Date = <<Thu Dec 12 14:59:00 CET 2024>>
+# 	- optionalLinks: java.lang.String = null
+
+notice04=27
+
+# acme.entities.notices.Notice{id=27, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 27
+# 	- version: int = 0
+# 	from acme.entities.notices.Notice:
+# 	- serialVersionUID: long = 1
+# 	- header: java.lang.String = "https://i.pinimg.com/originals/f8/b2/7d/f8b27d53c369a1413a8876a1d3d1a597.jpg"
+# 	- title: java.lang.String = "title notice 4"
+# 	- body: java.lang.String = "Description of body 4"
+# 	- creationDateTime: java.util.Date = <<Sat Feb 15 15:15:00 CET 2014>>
+# 	- deadline: java.util.Date = <<Mon Jan 21 14:59:00 CET 2019>>
+# 	- optionalLinks: java.lang.String = "http://localhost:8080/acme-incubator/anonymous/notice/show?id=24,       http://localhost:8080/acme-incubator/anonymous/notice/show?id=25"
 
